Replace deprecated "new Integer(…)" with "Integer.valueOf(…)".
Same for Float, Long.